syntax = "proto3";
package sixprotocol.nftoracle;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "sixprotocol/nftoracle/params.proto";
import "sixprotocol/nftoracle/mint_request.proto";
import "sixprotocol/nftoracle/action_request.proto";
import "sixprotocol/nftoracle/collection_owner_request.proto";
import "sixprotocol/nftoracle/oracle_config.proto";
import "sixprotocol/nftoracle/action_signer.proto";
import "sixprotocol/nftoracle/binded_signer.proto";
import "sixprotocol/nftoracle/action_signer_config.proto";
import "sixprotocol/nftoracle/sync_action_signer.proto";

option go_package = "github.com/thesixnetwork/six-protocol/x/nftoracle/types";

// GenesisState defines the nftoracle module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  repeated MintRequest mintRequestList = 2 [ (gogoproto.nullable) = false ];
  uint64 mintRequestCount = 3;
  repeated ActionOracleRequest actionRequestList = 4
      [ (gogoproto.nullable) = false ];
  uint64 actionRequestCount = 5;
  repeated CollectionOwnerRequest collectionOwnerRequestList = 6
      [ (gogoproto.nullable) = false ];
  uint64 collectionOwnerRequestCount = 7;
  OracleConfig oracle_config = 8;
  repeated ActionSigner actionSignerList = 9 [ (gogoproto.nullable) = false ];
  repeated BindedSigner bindedSignerList = 10 [ (gogoproto.nullable) = false ];
  repeated ActionSignerConfig actionSignerConfigList = 13
      [ (gogoproto.nullable) = false ];
  repeated SyncActionSigner syncActionSignerList = 14
      [ (gogoproto.nullable) = false ];
  uint64 syncActionSignerCount = 15;
}
